# ai-k8s-sre-operator

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
Screenshots/: README.md
agent/: Dockerfile  __init__.py  config.py  error_detector.py  log_tailer.py  main.py  metrics_reporter.py  pattern_learner.py
ai/: __init__.py  confidence.py  incident_ranker.py  llm.py  prompts.py  rca_engine.py  remediation_engine.py
anomaly/: __init__.py  metrics_analyzer.py
api/: __init__.py  main.py
audit/: __init__.py  logger.py
cli/: __init__.py  main.py
collectors/: __init__.py  change_collector.py  events_collector.py  k8s_watcher.py  logs_collector.py  metrics_collector.py
correlation/: __init__.py  incident_graph.py  signal_correlator.py  timeline_builder.py
detectors/: __init__.py  base.py  cni_detector.py  crashloop_detector.py  dns_detector.py  hpa_detector.py  imagepull_detector.py  ingress_detector.py  network_policy_detector.py  node_pressure_detector.py  oomkill_detector.py  pending_pods_detector.py  probe_failure_detector.py  pvc_detector.py  quota_detector.py  rbac_detector.py  rollout_detector.py  service_detector.py  service_mesh_detector.py  storage_detector.py
docs/: api.md  application-monitoring.md  architecture.md  cli.md  configuration.md  dashboard.md  deployment.md  detectors.md  evaluation.md  examples.md  knowledge-base.md  learning.md  multi_cluster.md  platforms.md  roadmap.md  safety.md  sidecar-agent.md  (+1 more)
(+119 files in other folders)
